--- a/app/src/main/res/layout/activity_edit_alarm.xml
+++ b/app/src/main/res/layout/activity_edit_alarm.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.munternet.app.courtesycall.EditAlarmActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/alarmItemLabelText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="- label -"
+        style="@style/TextLarge"
+        android:layout_margin="24dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:id="@+id/alarmText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" - "
+        style="@style/TextSmall"
+        android:layout_margin="24dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/alarmItemLabelText"
+        />
+
+
+</RelativeLayout>
