--- a/app/src/main/res/layout/activity_edit_alarm.xml
+++ b/app/src/main/res/layout/activity_edit_alarm.xml
@@ -5,24 +5,37 @@
 
     <EditText
         android:id="@+id/alarmItemLabelText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="- label -"
+        android:text="Label"
+        android:textAllCaps="true"
         style="@style/TextLarge"
-        android:layout_margin="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_centerHorizontal="true"
         />
 
-    <TextView
-        android:id="@+id/alarmText"
+    <Button
+        android:id="@+id/alarmItemDateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" - "
-        style="@style/TextSmall"
-        android:layout_margin="24dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/alarmItemLabelText"
+        android:text="Thu, 23 Mar 2017"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:padding="8dp"
         />
 
+    <Button
+        android:id="@+id/alarmItemTimeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/alarmItemLabelText"
+        android:text="14:30"
+        android:layout_toEndOf="@id/alarmItemDateButton"
+        android:layout_margin="8dp"
+        />
 
 </RelativeLayout>
