--- a/app/src/main/res/layout/activity_edit_alarm.xml
+++ b/app/src/main/res/layout/activity_edit_alarm.xml
@@ -7,13 +7,14 @@
         android:id="@+id/alarmItemLabelText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Label"
-        android:textAllCaps="true"
+        android:inputType="textCapSentences"
         style="@style/TextLarge"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_centerHorizontal="true"
+        android:hint="Name for alarm"
+
         />
 
     <Button
