CallFragment: handle empty view

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,8 +33,20 @@
         android:layout_height="wrap_content"
         android:text="Great guy"
         style="@style/TextLarge"
+        android:layout_margin="8dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/helpText"
+        />
+
+    <Button
+        android:id="@+id/editProfileButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:text="edit"
+        android:layout_below="@+id/helpText2"
         />
 
 </RelativeLayout>
