--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -5,26 +5,34 @@
     android:layout_height="match_parent"
     >
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:layout_width="184dp"
-        android:layout_height="185dp"
-        android:src="@drawable/ic_courtesy_call_24dp"
-        android:tint="@color/colorAccent"
-        />
-
-    <TextView
-        android:id="@+id/helpText"
+    <LinearLayout
+        android:id="@+id/callEmptyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No calls"
-        style="@style/TextLarge"
-        android:layout_margin="24dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/logo"
-        />
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="184dp"
+            android:layout_height="185dp"
+            android:src="@drawable/ic_courtesy_call_24dp"
+            android:tint="@color/colorAccent"
+            />
+
+        <TextView
+            android:id="@+id/helpText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No calls"
+            style="@style/TextLarge"
+            android:layout_margin="24dp"
+            />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/alarmText"
