--- a/app/src/main/res/layout/call_list_header.xml
+++ b/app/src/main/res/layout/call_list_header.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
 
-        <TextView
-            android:id="@+id/alarmItemLabelText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/TextLarge.AlarmItemLabel"
-            android:layout_centerInParent="true"
-            android:drawableTop="@drawable/ic_group_24dp"
-            android:text="Perform a Curtesy call"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
-            />
+    <ImageView
+        android:id="@+id/alarmHeaderImage"
+        android:src="@drawable/ic_group_24dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/alarmItemLabelText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextLarge.AlarmItemLabel"
+        android:text="Perform a Curtesy call"
+        android:layout_below="@id/alarmHeaderImage"
+        android:layout_centerHorizontal="true"
+        />
+
+</LinearLayout>
