--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -12,14 +12,16 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:gravity="center"
+        android:alpha="0.3"
         >
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="184dp"
-            android:layout_height="185dp"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:src="@drawable/ic_courtesy_call_24dp"
-            android:tint="@color/colorAccent"
+            android:tint="@color/text"
+            android:layout_marginBottom="16dp"
             />
 
         <TextView
@@ -28,7 +30,7 @@
             android:layout_height="wrap_content"
             android:text="No calls"
             style="@style/TextLarge"
-            android:layout_margin="24dp"
+            android:layout_margin="8dp"
             />
 
     </LinearLayout>
