--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,10 +10,10 @@
         android:id="@+id/logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:layout_width="184dp"
-        android:layout_height="185dp"
-        android:src="@drawable/ic_person_24dp"
-        android:tint="@color/colorAccent"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/ic_account_circle_24dp"
+        android:layout_marginBottom="32dp"
         />
 
     <TextView
@@ -47,6 +47,7 @@
         android:layout_margin="8dp"
         android:text="edit"
         android:layout_below="@+id/userId"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
         />
 
 </RelativeLayout>
