Hooked up SinchService. Now possible to call other user

--- a/app/src/main/res/layout/activity_incoming_call.xml
+++ b/app/src/main/res/layout/activity_incoming_call.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:fitsSystemWindows="true"
-    tools:context="com.munternet.app.courtesycall.IncomingCallActivity">
+    tools:context="com.munternet.app.courtesycall.OldIncomingCallActivity">
 
     <ImageView
         android:id="@+id/bellImage"
