--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -41,4 +41,14 @@
         android:layout_height="wrap_content"
         />
 
+    <ImageButton
+        android:id="@+id/overflowButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_more_vert_24dp"
+        android:alpha="1.3"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_alignParentEnd="true"
+        />
+
 </RelativeLayout>
