--- a/app/src/main/res/layout/activity_outgoing_call.xml
+++ b/app/src/main/res/layout/activity_outgoing_call.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:fitsSystemWindows="true"
-    tools:context="com.munternet.app.courtesycall.OldIncomingCallActivity">
+    tools:context="com.munternet.app.courtesycall.OutgoingCallActivity">
 
     <ImageView
         android:id="@+id/bellImage"
@@ -19,27 +19,39 @@
         />
 
     <TextView
-        android:id="@+id/answerText"
-        android:padding="32dp"
-        android:layout_margin="32dp"
+        android:id="@+id/infoText"
+        android:padding="8dp"
+        android:layout_marginBottom="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/bellImage"
+        android:layout_centerHorizontal="true"
+        android:text="TODO: Add info regarding the call here"
+        style="@style/TextSmall"
+        android:textColor="@color/colorAccent"
+        />
+
+    <TextView
+        android:id="@+id/answerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/infoText"
         android:layout_centerHorizontal="true"
         android:text="@string/app_name"
         style="@style/Base.TextAppearance.AppCompat.Display1"
         android:textColor="@color/colorAccent"
         />
 
+
     <Button
-        android:id="@+id/answerButton"
+        android:id="@+id/performCallButton"
         android:padding="32dp"
         android:layout_margin="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/bellImage"
         android:layout_centerHorizontal="true"
-        android:text="answer"
+        android:text="Make the call"
         style="@style/Base.Widget.AppCompat.Button.Colored"
         />
 
