--- a/app/src/main/res/layout/activity_outgoing_call.xml
+++ b/app/src/main/res/layout/activity_outgoing_call.xml
@@ -4,8 +4,6 @@
     android:id="@+id/activity_incoming_call"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:fitsSystemWindows="true"
     tools:context="com.munternet.app.courtesycall.OutgoingCallActivity">
 
@@ -42,17 +40,15 @@
         android:textColor="@color/colorAccent"
         />
 
-
     <Button
         android:id="@+id/performCallButton"
-        android:padding="32dp"
-        android:layout_margin="32dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/bellImage"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="Make the call"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:theme="@style/AppTheme.Button.Accent"
+        android:layout_marginBottom="16dp"
         />
 
 </RelativeLayout>
