--- a/app/src/main/res/layout/sinch_callscreen.xml
+++ b/app/src/main/res/layout/sinch_callscreen.xml
@@ -11,7 +11,7 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryLessDark"
+            android:background="@color/colorPrimaryDarker"
             >
 
         <TextView
@@ -68,13 +68,11 @@
 
         <Button
             android:id="@+id/hangupButton"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="End call"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:theme="@style/AppTheme.Button.Accent"
             />
 
     </RelativeLayout>
