--- a/app/src/main/res/layout/activity_outgoing_call.xml
+++ b/app/src/main/res/layout/activity_outgoing_call.xml
@@ -36,8 +36,7 @@
         android:layout_above="@id/infoText"
         android:layout_centerHorizontal="true"
         android:text="@string/app_name"
-        style="@style/Base.TextAppearance.AppCompat.Display1"
-        android:textColor="@color/colorAccent"
+        style="@style/TextDisplay"
         />
 
     <Button
