--- a/app/src/main/res/layout/sinch_incoming.xml
+++ b/app/src/main/res/layout/sinch_incoming.xml
@@ -6,43 +6,42 @@
     android:weightSum="5">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:background="@color/colorPrimaryDarker"
-            >
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
 
         <TextView
-                android:id="@+id/remoteUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="14dp"
-                android:text="Sample user"
-                android:textColor="@color/colorAccent"
-                android:textSize="28sp"/>
+            android:id="@+id/remoteUser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="14dp"
+            android:text="Sample user"
+            style="@style/TextDisplay"
+            />
 
         <TextView
-                android:id="@+id/callState"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Incoming call"
-                android:textColor="@color/colorAccent"
-                android:textSize="16sp"
-                android:textAllCaps="true"
-                />
+            android:id="@+id/callState"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Incoming call"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            />
 
     </LinearLayout>
 
     <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_courtesy_call_24dp"
-            android:padding="0dip"
-            android:layout_weight="3"
-            android:contentDescription="Call background">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_courtesy_call_24dp"
+        android:padding="0dip"
+        android:layout_weight="3"
+        android:contentDescription="Call background">
 
     </ImageView>
 
