--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="TextDisplay" parent="@style/Base.TextAppearance.AppCompat.Display1">
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
     <style name="TextLarge.AlarmItemLabel">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
