AutoStart Sinch Call service after device reboot Simplified call layout

--- a/app/src/main/res/layout/sinch_incoming.xml
+++ b/app/src/main/res/layout/sinch_incoming.xml
@@ -1,57 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="5">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        >
-
-        <TextView
-            android:id="@+id/remoteUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="14dp"
-            android:text="Sample user"
-            style="@style/TextDisplay"
-            />
-
-        <TextView
-            android:id="@+id/callState"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Incoming call"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp"
-            android:textAllCaps="true"
-            />
-
-    </LinearLayout>
+    >
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:src="@drawable/ic_courtesy_call_24dp"
-        android:padding="0dip"
-        android:layout_weight="3"
-        android:contentDescription="Call background">
+        android:contentDescription="Call background"
+        android:layout_centerInParent="true"
+        android:tint="@color/colorPrimary"
+        />
 
-    </ImageView>
+    <TextView
+        android:id="@+id/remoteUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sample user"
+        style="@style/TextDisplay"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        />
+
+    <TextView
+        android:id="@+id/callState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Incoming call"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        android:textAllCaps="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/remoteUser"
+        />
 
     <RelativeLayout
         android:id="@+id/bottomPanel"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/colorPrimaryDark"
-        android:layout_weight="1"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
         android:gravity="center">
 
             <Button
@@ -75,4 +66,4 @@
 
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
