--- a/app/src/main/res/layout/alarm_list_header.xml
+++ b/app/src/main/res/layout/alarm_list_header.xml
@@ -3,28 +3,62 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"
     android:orientation="vertical"
     android:gravity="center"
     >
 
-        <ImageView
-            android:id="@+id/alarmHeaderImage"
-            android:src="@drawable/ic_person_24dp"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
-            />
+    <ImageView
+        android:id="@+id/alarmHeaderImage"
+        android:src="@drawable/ic_bell_outline_24dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        />
 
-        <TextView
-            android:id="@+id/alarmItemLabelText"
-            android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/alarmItemLabelText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextLarge.AlarmItemLabel"
+        android:text="Your alarms"
+        android:layout_below="@id/alarmHeaderImage"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/alarmTipCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:visibility="gone"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextLarge.AlarmItemLabel"
-            android:text="Your alarms"
-            android:layout_below="@id/alarmHeaderImage"
-            android:layout_centerHorizontal="true"
-            />
+            android:layout_margin="16dp"
+            android:orientation="vertical"
+            android:gravity="end"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="This is the place for your important tasks. When the time is due you will receive a call from another user"
+                android:layout_marginBottom="8dp"
+                />
+
+            <Button
+                android:id="@+id/alarmHeaderTipButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Got it"
+                />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
