--- a/app/src/main/res/layout/call_list_header.xml
+++ b/app/src/main/res/layout/call_list_header.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"
     android:orientation="vertical"
     android:gravity="center"
     >
@@ -25,6 +24,41 @@
         android:text="Perform a Curtesy call"
         android:layout_below="@id/alarmHeaderImage"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
         />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/callTipCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:visibility="gone"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="vertical"
+            android:gravity="end"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Alarms from other users. Help the community, by calling other users. Just check the alarms"
+                android:layout_marginBottom="8dp"
+                />
+
+            <Button
+                android:id="@+id/callHeaderTipButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Got it"
+                />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
