--- a/app/src/main/res/layout/activity_edit_alarm.xml
+++ b/app/src/main/res/layout/activity_edit_alarm.xml
@@ -11,7 +11,7 @@
         style="@style/TextLarge"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_centerHorizontal="true"
         android:hint="Name for alarm"
 
@@ -37,6 +37,15 @@
         android:text="14:30"
         android:layout_toEndOf="@id/alarmItemDateButton"
         android:layout_margin="8dp"
+        />
+
+    <Button
+        android:id="@+id/okButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
         />
 
 </RelativeLayout>
