--- a/app/src/main/res/layout/activity_outgoing_call.xml
+++ b/app/src/main/res/layout/activity_outgoing_call.xml
@@ -25,8 +25,9 @@
         android:layout_above="@id/bellImage"
         android:layout_centerHorizontal="true"
         android:text="TODO: Add info regarding the call here"
-        style="@style/TextSmall"
+        style="@style/TextDisplay"
         android:textColor="@color/colorAccent"
+        android:gravity="center_horizontal"
         />
 
     <TextView
@@ -36,7 +37,8 @@
         android:layout_above="@id/infoText"
         android:layout_centerHorizontal="true"
         android:text="@string/app_name"
-        style="@style/TextDisplay"
+        style="@style/TextSmall"
+        android:textColor="@color/colorAccent"
         />
 
     <Button
