--- a/app/src/main/res/color/main_bottom_navigation_selector.xml
+++ b/app/src/main/res/color/main_bottom_navigation_selector.xml
@@ -9,10 +9,10 @@
             android:state_checked="true"
             />
         <item
-            android:color="@color/colorPrimary"
+            android:color="@color/textSecondary"
             android:state_checked="false"
             />
         <item
-            android:color="@color/colorPrimary"
+            android:color="@color/textSecondary"
             />
 </selector>
