--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,21 @@
 
 
     <!--Brown 300-->
-    <color name="colorPrimary">#A1887F</color>
+    <color name="colorPrimary">#212121</color>
+    <!--Gray 900-->
+    <color name="colorPrimaryLessDark">#212121</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryDarker">#000000</color>
 
-    <color name="colorPrimaryLessDark">#4E342E</color>
-    <!--Brown 900-->
-    <color name="colorPrimaryDark">#3E2723</color>
-    <color name="colorPrimaryDarker">#39221e</color>
+
+
+    <!--&lt;!&ndash;Brown 300&ndash;&gt;-->
+    <!--<color name="colorPrimary">#A1887F</color>-->
+
+    <!--<color name="colorPrimaryLessDark">#4E342E</color>-->
+    <!--&lt;!&ndash;Brown 900&ndash;&gt;-->
+    <!--<color name="colorPrimaryDark">#3E2723</color>-->
+    <!--<color name="colorPrimaryDarker">#39221e</color>-->
     <!--Deep Orange A700-->
     <color name="colorAccent">#DD2C00</color>
 
@@ -19,6 +28,6 @@
 
     <color name="text">#FFF</color>
     <color name="textInverted">#000</color>
-    <color name="textSecondary">@color/colorPrimary</color>
-
+    <!--<color name="textSecondary">@color/colorPrimary</color>-->
+    <color name="textSecondary">#616161</color>
 </resources>
