--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <!--<color name="colorAccent">#00E676</color>-->
 
 
-    <!--Brown 300-->
+    <!--Gray 900-->
     <color name="colorPrimary">#212121</color>
     <!--Gray 900-->
     <color name="colorPrimaryLessDark">#212121</color>
@@ -30,4 +30,6 @@
     <color name="textInverted">#000</color>
     <!--<color name="textSecondary">@color/colorPrimary</color>-->
     <color name="textSecondary">#616161</color>
+    <color name="textBottomNavigationDeselected">#616161</color>
+
 </resources>
