Added call waiting animation Fixed: call service not started after first app install

--- a/app/src/main/res/layout/dialog_welcome.xml
+++ b/app/src/main/res/layout/dialog_welcome.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:hint="Your name"
         android:imeOptions="actionNext"
+        android:lines="1"
         />
 
     <EditText
@@ -22,6 +23,7 @@
         android:hint="User ID"
         android:inputType="numberDecimal"
         android:imeOptions="actionDone"
+        android:lines="1"
         />
 
 </LinearLayout>
