--- a/app/src/main/res/layout/sinch_callscreen.xml
+++ b/app/src/main/res/layout/sinch_callscreen.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <ImageView
@@ -12,6 +13,14 @@
         android:layout_centerInParent="true"
         android:tint="@color/colorPrimary"
         />
+
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/callWaitingSpinner"
+        style="@style/SpinKitView.Large.ThreeBounce"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
+        app:SpinKit_Color="@color/text" />
 
     <TextView
         android:id="@+id/callState"
