--- a/app/src/main/res/layout/call_list_item.xml
+++ b/app/src/main/res/layout/call_list_item.xml
@@ -7,7 +7,8 @@
     android:layout_marginBottom="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    android:clickable="true">
+    android:clickable="true"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
+            android:clickable="false"
             />
 
         <TextView
