--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,17 @@
     <!--<color name="colorAccent">#00E676</color>-->
 
 
-    <!--Gray 900-->
-    <color name="colorPrimary">#212121</color>
-    <!--Gray 900-->
-    <color name="colorPrimaryLessDark">#212121</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorPrimaryDarker">#000000</color>
+    <!--&lt;!&ndash;Gray 900&ndash;&gt;-->
+    <!--<color name="colorPrimary">#212121</color>-->
+    <!--&lt;!&ndash;Gray 900&ndash;&gt;-->
+    <!--<color name="colorPrimaryLessDark">#212121</color>-->
+    <!--<color name="colorPrimaryDark">#000000</color>-->
+    <!--<color name="colorPrimaryDarker">#000000</color>-->
+
+    <color name="colorPrimary">#cfd8dc</color>
+    <color name="colorPrimaryLessDark">#cfd8dc</color>
+    <color name="colorPrimaryDark">#b0bec5</color>
+    <color name="colorPrimaryDarker">#78909c</color>
 
 
 
@@ -29,7 +34,7 @@
     <color name="text">#FFF</color>
     <color name="textInverted">#000</color>
     <!--<color name="textSecondary">@color/colorPrimary</color>-->
-    <color name="textSecondary">#616161</color>
-    <color name="textBottomNavigationDeselected">#616161</color>
+    <color name="textSecondary">#78909c</color>
+    <color name="textBottomNavigationDeselected">#cfd8dc</color>
 
 </resources>
