--- a/app/src/main/res/color/main_bottom_navigation_selector.xml
+++ b/app/src/main/res/color/main_bottom_navigation_selector.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
         <item
-            android:color="@color/colorAccent"
+            android:color="@color/textBottomNavigationSelected"
             android:state_pressed="true"
             />
         <item
-            android:color="@color/colorAccent"
+            android:color="@color/textBottomNavigationSelected"
             android:state_checked="true"
             />
         <item
