--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -19,7 +19,7 @@
             android:id="@+id/logo"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:src="@drawable/ic_bell_outline_24dp"
+            android:src="@drawable/ic_courtesy_call_24dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             />
@@ -28,7 +28,9 @@
             android:id="@+id/helpText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You have no alarms \nAdd an alarm"
+            android:text="
+            You haven't booked any calls
+            \nTry and book one"
             style="@style/TextLarge"
             android:layout_margin="8dp"
             android:gravity="center_horizontal"
