Light app theme, with updated bottomNavigationBar icons Force Activities to portrait

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,7 @@
         android:layout_height="96dp"
         android:src="@drawable/ic_account_circle_24dp"
         android:layout_marginBottom="32dp"
+        android:tint="@color/text"
         />
 
     <TextView
