--- a/app/src/main/res/drawable/ic_phone_outgoing.xml
+++ b/app/src/main/res/drawable/ic_phone_outgoing.xml
@@ -4,9 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:pathData="M12,4l0,2l4.586,0l-6.293,6.293l1.415,1.414l6.292,-6.293l0,4.586l2,0l0,-8z"
-        android:fillColor="#757575"/>
-    <path
-        android:pathData="M18,16h-4c-0.553,0 -1,0.447 -1,1v1c-4,0 -6.937,-3.062 -7,-7h1c0.553,0 1,-0.447 1,-1V6c0,-0.553 -0.447,-1 -1,-1H3C2.448,5 2,5.447 2,6v5c0,6.075 4.925,11 11,11h5c0.553,0 1,-0.447 1,-1v-4C19,16.447 18.553,16 18,16z"
-        android:fillColor="#757575"/>
+        android:fillColor="#FF000000"
+        android:pathData="M4,3A1,1 0,0 0,3 4A17,17 0,0 0,20 21A1,1 0,0 0,21 20V16.5A1,1 0,0 0,20 15.5C18.75,15.5 17.55,15.3 16.43,14.93C16.08,14.82 15.69,14.9 15.41,15.17L13.21,17.37C10.38,15.93 8.06,13.62 6.62,10.78L8.82,8.57C9.1,8.31 9.18,7.92 9.07,7.57C8.7,6.45 8.5,5.25 8.5,4A1,1 0,0 0,7.5 3H4M15,3V4.5H18.5L13,10L14,11L19.5,5.5V9H21V3H15Z"/>
 </vector>
