--- a/app/src/main/res/layout/activity_outgoing_call.xml
+++ b/app/src/main/res/layout/activity_outgoing_call.xml
@@ -14,6 +14,7 @@
         android:layout_height="96dp"
         android:src="@drawable/ic_bell_outline_24dp"
         android:tint="@color/colorAccent"
+        android:clickable="true"
         />
 
     <TextView
