--- a/app/src/main/res/layout/call_list_header.xml
+++ b/app/src/main/res/layout/call_list_header.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/ic_group_24dp"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:tint="@color/text"
         />
 
     <TextView
