--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -22,6 +22,7 @@
             android:src="@drawable/ic_courtesy_call_24dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:tint="@color/text"
             />
 
         <TextView
@@ -40,6 +41,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/ic_arrow_downward_16dp"
+            android:tint="@color/text"
             />
 
     </LinearLayout>
