--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,9 @@
     <!--<color name="colorPrimaryDark">#000000</color>-->
     <!--<color name="colorPrimaryDarker">#000000</color>-->
 
-    <color name="colorPrimary">#cfd8dc</color>
+    <color name="colorPrimary">#eceff1</color>
     <color name="colorPrimaryLessDark">#cfd8dc</color>
-    <color name="colorPrimaryDark">#b0bec5</color>
+    <color name="colorPrimaryDark">#cfd8dc</color>
     <color name="colorPrimaryDarker">#78909c</color>
 
 
@@ -32,10 +32,16 @@
 
     <color name="acceptCall">#00C853</color>
 
-    <color name="text">#FFF</color>
-    <color name="textInverted">#000</color>
+    <color name="text">#000</color>
+    <color name="textInverted">#FFF</color>
     <!--<color name="textSecondary">@color/colorPrimary</color>-->
     <color name="textSecondary">#78909c</color>
+
+
+    <color name="windowBackground">#eceff1</color>
+    <color name="cardBackground">#FFF</color>
+
+    <color name="bottomNavigationBackground">#FFF</color>
     <color name="textBottomNavigationDeselected">#cfd8dc</color>
-    <color name="textBottomNavigationSelected">@color/colorAccentLight</color>
+    <color name="textBottomNavigationSelected">@color/text</color>
 </resources>
