--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/colorPrimaryDark</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:statusBarColor">@android:color/black</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -15,7 +16,7 @@
     </style>
 
     <style name="AlertCardViewStyle" parent="CardView">
-        <item name="cardBackgroundColor">@color/colorPrimaryLessDark</item>
+        <item name="cardBackgroundColor">@color/cardBackground</item>
     </style>
 
     <style name="TextLarge">
