Added on-boarding welcome wizard Major refactoring

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.munternet.app.courtesycall.MainActivity"
+    tools:context="com.munternet.app.courtesycall.ui.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
