--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.munternet.app.courtesycall.MainActivity"
+    tools:context="com.munternet.app.courtesycall.ui.MainActivity"
 
     >
 
